--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -64,6 +64,7 @@ body, html {
 }
 
 /* тимчасові стилі таблиці */
+
 .table-responsive {
   overflow-x: auto;
 }
@@ -122,7 +123,9 @@ body, html {
 .header-icons {
   flex: 1;
   justify-content: flex-end;
+  align-items: baseline;
 }
+
 
 .header-nav {
   display: flex;
@@ -164,6 +167,7 @@ body, html {
   position: relative;
   display: inline-block;
   margin-top: 9px;
+
 }
 
 .search-input {
