--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -64,6 +64,7 @@ body, html {
 }
 
 /* тимчасові стилі таблиці */
+
 .table-responsive {
   overflow-x: auto;
 }
@@ -122,7 +123,9 @@ body, html {
 .header-icons {
   flex: 1;
   justify-content: flex-end;
+  align-items: baseline;
 }
+
 
 .header-nav {
   display: flex;
@@ -164,6 +167,7 @@ body, html {
   position: relative;
   display: inline-block;
   margin-top: 9px;
+
 }
 
 .search-input {
@@ -189,7 +193,19 @@ body, html {
   color: black;
 }
 
+.search-input.active {
+  width: 200px;
+  height: auto;
+  padding: 8px 15px;
+  border-radius: 20px;
+  color: black;
+}
+
 .search-container:hover .search-input::placeholder {
+  color: #666;
+}
+
+.search-input.active::placeholder {
   color: #666;
 }
 
@@ -202,6 +218,10 @@ body, html {
   color: #666;
   cursor: pointer;
   transition: transform 0.5s;
+}
+
+.search-container.active .search-button {
+  transform: translateY(-3px);
 }
 
 .search-container:hover .search-button {
@@ -233,6 +253,88 @@ body, html {
 
   .search-input {
     width: 100%;
+  }
+}
+
+.search-results {
+  display: none;
+  position: absolute;
+  top: calc(100% + 5px);
+  right: 0;
+  width: 300px;
+  background: rgba(255, 255, 255, 0.95);
+  backdrop-filter: blur(10px);
+  border-radius: 15px;
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.15);
+  z-index: 1000;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.search-section {
+  padding: 15px;
+}
+
+.search-section:not(:last-child) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.search-section-title {
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 10px;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.search-item {
+  display: flex;
+  padding: 10px;
+  text-decoration: none;
+  color: inherit;
+  transition: background-color 0.3s;
+  border-radius: 8px;
+}
+
+.search-item:hover {
+  background-color: rgba(0, 0, 0, 0.05);
+}
+
+.search-item-image {
+  width: 40px;
+  height: 40px;
+  margin-right: 12px;
+}
+
+.search-item-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.search-item-info {
+  flex: 1;
+}
+
+.search-item-name {
+  font-size: 14px;
+  color: #333;
+  margin-bottom: 4px;
+}
+
+.search-item-price {
+  font-size: 12px;
+  color: #666;
+}
+
+@media (max-width: 768px) {
+  .search-input.active {
+    width: 100%;
+  }
+
+  .search-results {
+    width: 100%;
+    right: 0;
   }
 }
 
@@ -362,6 +464,9 @@ body, html {
   box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.07);
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 100%;
+  max-width: 270px;
+  margin: 0 auto;
 }
 
 .card:hover {
@@ -370,26 +475,94 @@ body, html {
 }
 
 .card-img-top {
-  height: 250px;
+  height: 180px;
   object-fit: cover;
 }
 
 .card-body {
   color: rgba(0, 0, 0, 0.8);
-  padding: 20px;
+  padding: 10px;
 }
 
 .card-title {
   font-weight: 600;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  font-size: 1rem;
 }
 
 .card-text {
-  margin-bottom: 10px;
+  margin-bottom: 8px;
+  font-size: 0.9rem;
 }
 
 .btn-warning, .btn-danger {
-  margin-top: 10px;
+  margin-top: 8px;
+  padding: 5px 15px;
+  font-size: 0.8rem;
+}
+
+.btn-outline-warning .btn-outline-danger {
+  background-color: #007bff;
+  font-size: 1rem;
+}
+
+/* кнопки для адмінів */
+
+.btn-admin {
+  margin: 7px 0 0 0;
+  font-size: 12px;
+}
+
+.btn-admin-add {
+  font-size: large;
+}
+
+/* Стилі для карток, які недоступні */
+
+.card.disabled {
+  background: rgba(200, 200, 200, 0.2);
+  border-color: rgba(150, 150, 150, 0.3);
+  pointer-events: none;
+}
+
+.card.disabled .card-img-top {
+  filter: grayscale(100%);
+}
+
+.card.disabled .card-body {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.card.disabled .btn-outline-dark {
+  background-color: rgba(150, 150, 150, 0.3);
+  border-color: rgba(150, 150, 150, 0.3);
+  color: rgba(0, 0, 0, 0.5);
+  cursor: not-allowed;
+}
+
+.card.disabled .btn-outline-dark[title="Детальніше"] {
+  pointer-events: auto;
+  background-color: transparent;
+  border-color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+}
+
+.card.disabled .btn-admin {
+  pointer-events: auto;
+  background-color: transparent;
+  border-color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.8);
+  cursor: pointer;
+}
+
+
+.card.disabled .btn-outline-dark[title="Детальніше"]:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.card.disabled .btn-admin:hover {
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 #searchInput {
@@ -415,6 +588,70 @@ body, html {
 
 .btn-primary:hover {
   background-color: #0056b3;
+}
+
+/* Стилі для блоку сортування */
+.sorting-block {
+  background: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(10px);
+  border-radius: 15px;
+  padding: 20px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+.sorting-block h2 {
+  color: #333;
+  font-size: 1.5rem;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.sorting-block label {
+  color: #333;
+  font-size: 1rem;
+  margin-bottom: 5px;
+  display: block;
+}
+
+.sorting-block select {
+  width: 100%;
+  padding: 10px 15px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: #333;
+  font-size: 1rem;
+  transition: all 0.3s ease;
+}
+
+.sorting-block select:focus {
+  outline: none;
+  border-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(255, 255, 255, 1);
+}
+
+.sorting-block button {
+  width: 100%;
+  padding: 10px 15px;
+  background-color: #333;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  transition: all 0.3s ease;
+  margin-top: 10px;
+}
+
+.sorting-block button:hover {
+  background-color: #000;
+  border-color: rgba(0, 0, 0, 0.5);
+  transform: translateY(-2px);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
 }
 
 /* Category-List */
@@ -455,6 +692,10 @@ body, html {
   margin: 0;
   text-align: center;
   font-size: 1.2rem;
+}
+
+.btn-admin-category {
+  font-size: large;
 }
 
 /* стилі для продуктів у категорії */
@@ -686,3 +927,137 @@ select:focus {
   font-weight: 600;
 }
 
+/* Стилі для сторінки з детальною інформацією про товар */
+
+.product-detail-container {
+  background: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(15px);
+  border-radius: 15px;
+  padding: 30px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  max-width: 900px;
+  margin: 40px auto;
+  display: flex;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.product-info {
+  flex: 1;
+  font-size: 1.1rem;
+}
+
+.product-title {
+  font-size: 2rem;
+  color: #333;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.detail-item {
+  margin-bottom: 15px;
+}
+
+.detail-item strong {
+  font-weight: 600;
+  color: #222;
+}
+
+.detail-item p,
+.detail-item span {
+  display: inline-block;
+  margin-left: 10px;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.price {
+  font-size: 1.5rem;
+  color: #333;
+  font-weight: bold;
+}
+
+.stock {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.stock.available {
+  color: #28a745;
+}
+
+.stock.out-of-stock {
+  color: #dc3545;
+}
+
+.image-container {
+  flex: 1;
+  text-align: right;
+}
+
+.product-image {
+  width: 380px;
+  height: 330px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.buy-button {
+  display: block;
+  margin-top: 20px;
+  padding: 12px 20px;
+  background-color: #333;
+  color: white;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s, color 0.3s;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+}
+
+.buy-button:hover {
+  background-color: #555;
+  color: white;
+}
+
+.buy-button.disabled {
+  background-color: #ccc;
+  color: #666;
+  cursor: not-allowed;
+}
+
+.back-button {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 10px 15px;
+  background-color: #ccc;
+  color: black;
+  border-radius: 5px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.back-button:hover {
+  background-color: #999;
+}
+
+.pagination .page-link {
+  color: #333;
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+
+.pagination .page-item.active .page-link {
+  background-color: #333;
+  border-color: #333;
+  color: #fff;
+}
+
+.pagination .page-item.disabled .page-link {
+  color: #6c757d;
+  pointer-events: none;
+  background-color: #fff;
+  border-color: #ddd;
+}
