--- a/src/main/resources/templates/categories/category-add.html
+++ b/src/main/resources/templates/categories/category-add.html
@@ -11,22 +11,23 @@
   </div>
 
   <main class="container mt-5 content">
-<h1>Додати категорію</h1>
-<form th:action="@{/categories/add}" th:object="${category}" method="post">
-  <div>
-    <label>Назва:</label>
-    <input type="text" th:field="*{name}" required>
-  </div>
-  <div>
-    <label>Покликання на зображення:</label>
-    <input type="text" th:field="*{imageUrl}">
-  </div>
-  <button type="submit" class="btn btn-success">Зберегти</button>
-  <a href="/categories" class="btn btn-secondary">Відмінити</a>
-</form>
-
-</main>
-<div th:replace="~{fragments/footer :: footer}"></div>
+    <h1 class="edit-product-title">Додати категорію</h1>
+    <form class="edit-product-form" th:action="@{/categories/add}" th:object="${category}" method="post">
+      <div class="form-group">
+        <label class="form-label">Назва:</label>
+        <input type="text" th:field="*{name}" class="form-input" required>
+      </div>
+      <div class="form-group">
+        <label class="form-label">Покликання на зображення:</label>
+        <input type="text" th:field="*{imageUrl}" class="form-input">
+      </div>
+      <div class="form-actions">
+        <button type="submit" class="btn btn-success">Зберегти</button>
+        <a href="/categories" class="btn btn-secondary">Відмінити</a>
+      </div>
+    </form>
+  </main>
+  <div th:replace="~{fragments/footer :: footer}"></div>
 </div>
 </body>
 </html>
