update cart and check products

--- a/src/main/resources/templates/products/product-details.html
+++ b/src/main/resources/templates/products/product-details.html
@@ -44,7 +44,7 @@
               method="post">
           <input type="hidden" name="productId" th:value="${product.id}">
           <input type="hidden" name="quantity" value="1">
-          <button class="buy-button btn btn-success" type="submit">Додати в кошик</button>
+          <button class="buy-button" type="submit">Додати в кошик</button>
         </form>
 
 
