add few prikoliv

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1164,3 +1164,105 @@ select:focus {
 .btn-secondary:hover {
   background-color: #5a6268;
 }
+
+/* Інфо сайту */
+
+.about-us-container, .contact-us-container {
+  background: rgba(255, 255, 255, 0.9);
+  backdrop-filter: blur(15px);
+  border-radius: 15px;
+  padding: 30px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  max-width: 900px;
+  margin: 20px auto;
+  text-align: justify;
+}
+
+.music-player {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.music-player h3 {
+  margin-bottom: 10px;
+}
+
+.contact-us-container p {
+  margin-bottom: 30px;
+}
+
+.contact-us-container a {
+  color: #007bff;
+  text-decoration: none;
+}
+
+.contact-us-container a:hover {
+  text-decoration: underline;
+}
+
+.about-us-container p, .contact-us-container p {
+  line-height: 1.6;
+}
+
+.about-us-container p {
+  padding-top: 11px;
+}
+
+.recipe {
+  margin-top: 30px;
+}
+
+.recipe h3 {
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+.recipe ul, .recipe ol {
+  list-style-type: disc;
+  padding-left: 20px;
+  margin-bottom: 15px;
+}
+
+.recipe li {
+  margin-bottom: 5px;
+}
+
+.recipe em {
+  font-style: italic;
+  color: #d00;
+}
+
+/* term */
+.page-title {
+  font-size: 2.5rem;
+  color: #444;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+
+.last-update {
+  font-size: 1rem;
+  color: #666;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.highlight {
+  color: #e74c3c;
+  font-weight: bold;
+}
+
+.terms-section {
+  margin-bottom: 40px;
+}
+
+.section-title {
+  font-size: 1.8rem;
+  color: #2c3e50;
+  margin-bottom: 15px;
+  border-bottom: 2px solid #a19090;
+  padding-bottom: 10px;
+}
+
+
