--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,7 +19,7 @@
     </div>
     <div class="header-icons">
       <a href="/delivery" class="icon-link">
-        <i class="bi bi-truck"></i>
+        <i class="bi fa-brands fa-jedi-order"></i>
       </a>
       <a href="/cart" class="icon-link">
         <i class="bi bi-basket"></i>
