--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -11,7 +11,7 @@
     <nav class="footer-nav">
       <a href="/about">ПРО НАС</a>
       <a href="/order-flow" class="brand-link">Order Flow</a>
-      <a href="/delivery">КОНТАКТИ</a>
+      <a href="/contact">КОНТАКТИ</a>
     </nav>
 
     <div class="footer-links">
