--- a/src/main/resources/templates/orders/details.html
+++ b/src/main/resources/templates/orders/details.html
@@ -42,9 +42,9 @@
     </select>
     <button type="submit">Оновити статус</button>
   </form>
-  <form th:action="@{/payment/process/{id}(id=${order.id})}" method="get"
-        th:if="${order.status.name() == 'NEW'}">
-    <button type="submit">Оплатити замовлення</button>
+  <form th:action="@{/payment/create}" method="post" th:if="${order.status.name() == 'NEW'}">
+    <input type="hidden" name="orderId" th:value="${order.id}"/>
+    <button type="submit" class="btn-payment">Оплатити замовлення</button>
   </form>
 
   <div>
